--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,62 @@
 
+@Article{	  larson1987misssing,
+  author	= {Larson, Richard K.},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {239--266},
+  title		= {Missing Prepositions and the Analysis of English Free
+		  Relative Clauses},
+  volume	= {18},
+  year		= {1987}
+}
+
+@Article{	  bogen1988saving,
+  author	= {Bogen, James and Woodward, James},
+  journal	= {The Philosophical Review},
+  number	= {3},
+  pages		= {303},
+  title		= {Saving the Phenomena},
+  volume	= {97},
+  year		= {1988}
+}
+
+@InCollection{	  mcnally2011existential,
+  address	= {Berlin},
+  author	= {McNally, Louise},
+  booktitle	= {Semantics: An International Handbook of Natural Language
+		  Meaning},
+  editor	= {Maienborn, Claudia and Heusinger, Klaus von and Portner,
+		  Paul},
+  publisher	= {De Gruyter},
+  title		= {Existential Sentences},
+  year		= {2011}
+}
+
+@InCollection{	  rigau1994agre,
+  author	= {Rigau, Gemma},
+  booktitle	= {Paths Towards Universal Grammar. Studies in Honor of
+		  Richard S. Kayne},
+  editor	= {Cinque, Guglielmo and Koster, Jan and Pollock, Jean-Yves
+		  and Rizzi, Luigi and Zanuttini, Raffaella},
+  pages		= {343-360},
+  publisher	= {Georgetown University Press},
+  title		= {Catalan Presentational Sentences and the Properties of AGR
+		  Nodes},
+  year		= {1994}
+}
+
+@InCollection{	  rigau2001temporal,
+  address	= {Amsterdam},
+  author	= {Rigau, Gemma},
+  booktitle	= {Romance Languages and Linguistic Theory 1999: Current
+		  Issues in Linguistic Theory},
+  editor	= {D' Hulst, Y. and Rooryck, Johan and Schorten, J.},
+  pages		= {307},
+  publisher	= {John Benjamins Publishing Company},
+  title		= {Temporal existential constructions in Romance},
+  year		= {2001}
+}
+
 @InCollection{	  ackerman2018coreference,
   address	= {Salt Lake City, UT},
   author	= {Ackerman, Lauren and Riches, Nick and Wallenberg, Joel},
