--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,31 @@
 
+@Article{	  ward1995existential,
+  author	= {Ward, Gregory and Birner, Betty},
+  journal	= {Language},
+  number	= {4},
+  pages		= {722},
+  title		= {Definiteness and the English Existential},
+  volume	= {71},
+  year		= {1995}
+}
+
+@Article{	  beaver2015bad,
+  author	= {Beaver, David and Francez, Itamar and Levinson, Dmitry},
+  journal	= {Semantics and Linguistic Theory},
+  pages		= {19},
+  title		= {Bad Subject: (Non-)canonicality and NP Distribution in
+		  Existentials},
+  volume	= {15},
+  year		= {2015}
+}
+
+@Book{		  milsark2014existential,
+  author	= {Milsark, Gary L.},
+  publisher	= {Routledge},
+  title		= {Existential Sentences in English},
+  year		= {2014}
+}
+
 @Article{	  larson1987misssing,
   author	= {Larson, Richard K.},
   journal	= {Linguistic Inquiry},
