--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,158 @@
 
+@Article{	  pistoia-reda2021logic,
+  author	= {Pistoia-Reda, Salvatore and San Mauro, Luca},
+  journal	= {Natural Language Semantics},
+  title		= {On logicality and natural logic},
+  year		= {2021}
+}
+
+@Book{		  salzmann2017reconstruction,
+  author	= {Salzmann, Martin},
+  pages		= {496},
+  publisher	= {Mouton De Gruyter},
+  title		= {Reconstruction and Resumption in Indirect
+		  A-bar-dependencies},
+  year		= {2017}
+}
+
+@InBook{	  salzmann2017prolepsis,
+  address	= {Hoboken, NJ, USA},
+  author	= {Salzmann, Martin},
+  booktitle	= {The Wiley Blackwell Companion to Syntax, Second Edition},
+  editor	= {Everaert, Martin and van Riemsdijk, Henk C.},
+  pages		= {1-42},
+  publisher	= {John Wiley and Sons Sons, Inc.},
+  title		= {Prolepsis},
+  year		= {2017}
+}
+
+@InBook{	  rothstein2017secondary,
+  address	= {Hoboken, NJ, USA},
+  author	= {Rothstein, Susan},
+  booktitle	= {The Wiley Blackwell Companion to Syntax, Second Edition},
+  editor	= {Everaert, Martin and van Riemsdijk, Henk C.},
+  pages		= {1-30},
+  publisher	= {John Wiley and Sons, Inc.},
+  title		= {Secondary Predication},
+  year		= {2017}
+}
+
+@InBook{	  moro2017there,
+  address	= {Hoboken, NJ, USA},
+  author	= {Moro, Andrea},
+  booktitle	= {The Wiley Blackwell Companion to Syntax, Second Edition},
+  editor	= {Everaert, Martin and van Riemsdijk, Henk C.},
+  pages		= {1-26},
+  publisher	= {John Wiley and Sons, Inc},
+  title		= {Existential Sentences and ExpletiveThere},
+  year		= {2017}
+}
+
+@Article{	  creissels2014beneficiaries,
+  author	= {Creissels, Denis},
+  journal	= {Linguistic Discovery},
+  number	= {2},
+  title		= {Cross-Linguistic Variation in the Treatment of
+		  Beneficiaries and the Argument vs. Adjunct Distinction},
+  volume	= {12},
+  year		= {2014}
+}
+
+@Article{	  gluckman2021tough,
+  author	= {Gluckman, John},
+  journal	= {Natural Language Semantics},
+  title		= {The meaning of the tough-construction},
+  year		= {2021}
+}
+
+@Article{	  elbourne2021pronoun,
+  author	= {Elbourne, Paul},
+  journal	= {Natural Language Semantics},
+  title		= {Evidence for generalized quantifier semantics in the
+		  interpretation of the English neuter singular pronoun},
+  year		= {2021}
+}
+
+@InBook{	  brucart1999relativa,
+  address	= {Madrid},
+  author	= {Brucart, Josep M.},
+  booktitle	= {Gram{\'a}tica Descriptiva de la Lengua Espa{\~n}ola},
+  editor	= {Bosque, Ignacio and Demonte, Violeta},
+  pages		= {395-422},
+  publisher	= {RAE Espasa},
+  title		= {La estrucutura del sintagma nominal: Las oraciones de
+		  relativo},
+  year		= {1999}
+}
+
+@InBook{	  demonte1999predicativos,
+  address	= {Madrid},
+  author	= {Demonte, Violeta and Masullo, Pascual},
+  booktitle	= {Gram{\'a}tica Descriptiva de la Lengua Espa{\~n}ola},
+  editor	= {Bosque, Ignacio and Demonte, Violeta},
+  pages		= {2461-2523},
+  publisher	= {RAE Espasa},
+  title		= {La predicaci{\'o}n: Los complementos predicativos},
+  year		= {1999}
+}
+
+@Book{		  leonetti1999determinantes,
+  address	= {Madrid},
+  author	= {Leonetti, Manuel},
+  pages		= {92},
+  publisher	= {Arco Libros},
+  title		= {Los determinantes},
+  year		= {1999}
+}
+
+@Book{		  suner1982presentational,
+  address	= {Washington DC},
+  author	= {Su{\~n}er, Margarita},
+  pages		= {371},
+  publisher	= {Georgetown University Press},
+  title		= {Syntax and Semantics of Spanish Presentational
+		  Sentence-types},
+  year		= {1982}
+}
+
+@Book{		  leonetti2007cuanticadores,
+  address	= {Madrid},
+  author	= {Leonetti, Manuel},
+  pages		= {95},
+  publisher	= {Arco Libros},
+  title		= {Los cuantificadores},
+  year		= {2007}
+}
+
+@Book{		  gutierrez-rexach2003,
+  address	= {Madrid},
+  author	= {Guti{\'e}rrez-Rexach, Javier},
+  pages		= {516},
+  publisher	= {Visor},
+  title		= {La sem{\'a}ntica de los indefinidos},
+  year		= {2003}
+}
+
+@Article{	  krajinovic2019existence,
+  author	= {Krajinovi{\'c}, Ana},
+  journal	= {Journal of South Asian Languages and Linguistics},
+  number	= {1},
+  pages		= {27--57},
+  title		= {Existence, location, possession, and copula in Malabar
+		  Indo-Portuguese},
+  volume	= {6},
+  year		= {2019}
+}
+
+@Article{	  bary2021report,
+  author	= {Bary, Corien and Maier, Emar},
+  journal	= {Semantics and Pragmatics},
+  number	= {8},
+  title		= {The landscape of speech reporting},
+  volume	= {14},
+  year		= {2021}
+}
+
 @Article{	  ward1995existential,
   author	= {Ward, Gregory and Birner, Betty},
   journal	= {Language},
