--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,47 @@
 
+@Article{	  mcnally2013pragmatics,
+  author	= {McNally, Louise},
+  journal	= {Wiley Interdiscip Rev Cogn Sci},
+  number	= {3},
+  pages		= {285--297},
+  title		= {Semantics and pragmatics.},
+  volume	= {4},
+  year		= {2013}
+}
+
+@Article{	  alonso-ovalle2021causes,
+  author	= {Alonso-Ovalle, Luis and Hsieh, Henrison},
+  journal	= {Journal of Semantics},
+  title		= {Causes and Expectations: On the Interpretation of the
+		  Tagalog Ability-Involuntary Action Form},
+  year		= {2021}
+}
+
+@InCollection{	  gumieletal2017ele,
+  address	= {Bellaterra},
+  author	= {Gumiel-Molina, Silvia and Moreno-Quib{\'e}n, Norberto and
+		  P{\'e}rez-Jim{\'e}nez, Isabel},
+  booktitle	= {Relaciones sint{\'a}cticas. Homenaje a Jos{\'e} M. Brucart
+		  y M. Llu{\"\i}sa Hernanz},
+  editor	= {Gallego, {\'A}ngel J. and Rodr{\'i}guez Sell{\'e}s,
+		  Yolanda and Fern{\'a}ndez S{\'a}nchez, Javier},
+  publisher	= {Departament de Filologia Espanyola},
+  title		= {Ling{\"u}{\'i}stica te{\'o}rica y ense{\~n}anza de ELE: la
+		  distribuci{\'o}n de ser y estar en espa{\~n}ol},
+  year		= {2017}
+}
+
+@Book{		  gallego2017relaciones,
+  address	= {Bellaterra},
+  editor	= {Gallego, {\'A}ngel J. and Rodr{\'i}guez Sell{\'e}s,
+		  Yolanda and Fern{\'a}ndez S{\'a}nchez, Javier},
+  pages		= {702},
+  publisher	= {Departament de Filologia Espanyola},
+  title		= {Relaciones sint{\'a}cticas. Homenaje a Jos{\'e} M. Brucart
+		  y M. Llu{\"\i}sa Hernanz},
+  year		= {2017}
+}
+
 @Article{	  pistoia-reda2021logic,
   author	= {Pistoia-Reda, Salvatore and San Mauro, Luca},
   journal	= {Natural Language Semantics},
