--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,287 @@
 
+@Article{	  rouveret1980causative,
+  author	= {Rouveret, Alain and Vergnaud, Jean-Roger},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {97--202},
+  title		= {Specifying Reference to the Subject: French Causatives and
+		  Conditions on Representations},
+  volume	= {11},
+  year		= {1980}
+}
+
+@InCollection{	  aissen1976reduction,
+  author	= {Aissen, Judith and Perlmutter, David M.},
+  booktitle	= {Proceedings of the 2nd Annual Meeting of the Berkeley
+		  Linguistics Society},
+  pages		= {1-30},
+  publisher	= {Linguistic Society of America},
+  title		= {Clause Reduction in Spanish},
+  year		= {1976}
+}
+
+@Article{	  zubizarreta1985causative,
+  author	= {Zubizarreta, Maria Luisa},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {247--289},
+  title		= {The Relation between Morphophonology and Morphosyntax: The
+		  Case of Romance Causatives},
+  volume	= {16},
+  year		= {1985}
+}
+
+@Article{	  devis2013comparativos,
+  author	= {Dev{\'i}s M{\'a}rquez, P. Pablo},
+  journal	= {Neuphilologische Mitteilungen},
+  number	= {1},
+  pages		= {3--41},
+  title		= {Sobre los denominados modificadores comparativos
+		  postadjetivales en espa{\~n}ol},
+  volume	= {114},
+  year		= {2013}
+}
+
+@Article{	  devis2011distributivos,
+  author	= {Dev{\'i}s M{\'a}rquez, P. Pablo},
+  journal	= {Romanische Forschungen},
+  number	= {1},
+  pages		= {3--26},
+  title		= {Los adjetivos distributivos en espa{\~n}ol},
+  volume	= {123},
+  year		= {2011}
+}
+
+@InCollection{	  bosque2000acciones,
+  address	= {Barcelona},
+  author	= {Bosque, Ignacio},
+  booktitle	= {L{\`e}xic, corpus i diccionaris},
+  editor	= {Cabr{\'e}, Teresa and Gelg{\'i}, Claudia},
+  publisher	= {Universitat Pompeu Fabra, IULA, Cicle de confer{\`e}ncies
+		  i seminaris 97-98},
+  title		= {Objetos que esconden acciones. Una reflexi{\'o}n sobre la
+		  sincategorematicidad},
+  year		= {2000}
+}
+
+@InCollection{	  bosque2007distributivos,
+  address	= {Frankfurt am Main},
+  author	= {Bosque, Ignacio},
+  booktitle	= {Vernetzungen: Bedeutung in Wort, Satz und Text.
+		  Festschrift f{\"u}r Gerd Wotjak zum 65 Geburtstag},
+  editor	= {Cuartero Otal, Juan and Emsel, Martina},
+  pages		= {149-155},
+  publisher	= {Band 1},
+  title		= {Sobre los adjetivos distributivos},
+  year		= {2007}
+}
+
+@Article{	  stump1981frequency,
+  author	= {Stump, Gregory T.},
+  journal	= {Linguistics and Philosophy},
+  number	= {2},
+  pages		= {221--257},
+  title		= {The interpretation of frequency adjectives},
+  volume	= {4},
+  year		= {1981}
+}
+
+@InCollection{	  stowell1991alignment,
+  author	= {Stowell, Tim},
+  booktitle	= {Perspectives on Phrase Structure: Heads and Licensing},
+  editor	= {Rothstein, Susan},
+  pages		= {105-135},
+  publisher	= {BRILL},
+  title		= {The Alignment of Arguments in Adjective Phrases},
+  year		= {1991}
+}
+
+@Article{	  epstein1984pro,
+  author	= {Epstein, Samuel D.},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {499--505},
+  title		= {Quantifier-Pro and the LF Representation of PROarb},
+  volume	= {15},
+  year		= {1984}
+}
+
+@InCollection{	  bhatt2017implicit,
+  address	= {Hoboken, NJ, USA},
+  author	= {Bhatt, Rajesh and Pancheva, Roumyana},
+  booktitle	= {The Wiley Blackwell Companion to Syntax},
+  editor	= {Evareart, Martin and van Riemsdijk, Henk},
+  pages		= {1-35},
+  publisher	= {John Wiley \& Sons, Inc.},
+  title		= {Implicit Arguments},
+  year		= {2017}
+}
+
+@InCollection{	  demonte1999adjetivo,
+  address	= {Madrid},
+  author	= {Demonte, Violeta},
+  booktitle	= {Gram{\'a}tica Descriptiva de la Lengua Espa{\~n}ola},
+  editor	= {Bosque, Ignacio and Demonte, Violeta},
+  publisher	= {RAE Espasa},
+  title		= {El adjetivo. Clases y usos. Su posici{\'o}n dentro del
+		  Sintagma Nominal},
+  year		= {1999}
+}
+
+@InCollection{	  sassoon2010tastes,
+  address	= {Amsterdam},
+  author	= {Sassoon, Galit W.},
+  booktitle	= {Proceedings of the Seventeenth Amsterdam Colloquium
+		  December 16--18, 2009},
+  editor	= {Aloni, Maria and Bastiaanse, Harald and de Jager, Tikitu
+		  and van Ormondt, Peter and Schulz, Katrin},
+  pages		= {137-146},
+  publisher	= {ILLC/University of Amsterdam},
+  title		= {Restricted Quantification over Tastes},
+  year		= {2010}
+}
+
+@InCollection{	  kertz2010evaluative,
+  address	= {Amsterdam},
+  author	= {Kertz, Laura},
+  booktitle	= {Movement Theory of Control},
+  editor	= {Hornstein, Norbert and Polinsky, Maria},
+  publisher	= {John Benjamins Publishing},
+  title		= {The argument structure of evaluative adjectives: A case of
+		  pseudo-raising},
+  year		= {2010}
+}
+
+@Book{		  hornstein2010control,
+  address	= {Amsterdam},
+  editor	= {Hornstein, Norbert and Polinsky, Maria},
+  pages		= {330},
+  publisher	= {John Benjamins Publishing},
+  title		= {Movement Theory of Control},
+  year		= {2010}
+}
+
+@Article{	  enger2013pancanke,
+  author	= {Enger, Hans-Olav},
+  journal	= {Nordic Journal of Linguistics},
+  number	= {3},
+  pages		= {275--301},
+  title		= {Scandinavian pancake sentences revisited},
+  volume	= {36},
+  year		= {2013}
+}
+
+@Article{	  rodrigues2015nominals,
+  author	= {Rodrigues, Patr{\'i}cia and Foltran, Maria Jos{\'e}},
+  journal	= {Journal of Portuguese Linguistics},
+  number	= {1},
+  pages		= {129},
+  title		= {Small Nominals in Brazilian Portuguese Copular
+		  Constructions},
+  volume	= {14},
+  year		= {2015}
+}
+
+@InCollection{	  roy2019ce,
+  address	= {Oxford, United Kingdom; New York, NY},
+  author	= {Roy, Isabelle and Shlonsky, Ur},
+  booktitle	= {The grammar of copulas across languages},
+  editor	= {Arche, Mar{\'i}a J. and F{\'a}bregas, Antonio and
+		  Mar{\'i}n, Rafael},
+  pages		= {153-169},
+  publisher	= {Oxford University Press},
+  title		= {Aspects of the syntax of ce in French copular sentences},
+  year		= {2019}
+}
+
+@Article{	  djarv2021swedishcopular,
+  author	= {Dj{\"a}rv, Kajsa},
+  journal	= {The Journal of Comparative Germanic Linguistics},
+  number	= {1},
+  pages		= {49--88},
+  title		= {The syntax and semantics of Swedish copular sentences: a
+		  comparative perspective},
+  volume	= {24},
+  year		= {2021}
+}
+
+@Article{	  josefsson2014pancake,
+  author	= {Josefsson, Gunl{\"o}g},
+  journal	= {Language Sciences},
+  pages		= {62--76},
+  title		= {Pancake sentences and the semanticization of formal gender
+		  in Mainland Scandinavian},
+  volume	= {43},
+  year		= {2014}
+}
+
+@InCollection{	  becker2021modalidad,
+  author	= {Becker, Martin},
+  booktitle	= {Manual de ling{\"u}{\'i}stica del hablar},
+  editor	= {Loureda, {\'O}scar and Schrott, Angela},
+  pages		= {177-200},
+  publisher	= {De Gruyter},
+  title		= {La modalidad entre lo dicho y el decir},
+  year		= {2021}
+}
+
+@Book{		  escandell-vidal2021hablar,
+  author	= {Escandell-Vidal, Mar{\'i}a Victoria},
+  editor	= {Loureda, {\'O}scar and Schrott, Angela},
+  pages		= {61-78},
+  publisher	= {De Gruyter},
+  title		= {El hablar como hecho pragm{\'a}ticocomunicativo},
+  volume	= {Manual de ling{\"u}{\'i}stica del hablar},
+  year		= {2021}
+}
+
+@Book{		  fernandez2000temp,
+  address	= {Madrid},
+  author	= {Garc{\'i}a Fern{\'a}ndez, Luis},
+  pages		= {380},
+  publisher	= {Visor},
+  title		= {La gram{\'a}tica de los complementos temporales},
+  year		= {2000}
+}
+
+@Book{		  uriagereka2002derivations,
+  author	= {Uriagereka, Juan},
+  pages		= {366},
+  publisher	= {Psychology Press},
+  title		= {Derivations},
+  year		= {2002}
+}
+
+@InCollection{	  portner2016imperatives,
+  address	= {Cambridge},
+  author	= {Portner, Paul},
+  booktitle	= {The Cambridge Handbook of Formal Semantics},
+  editor	= {Aloni, Maria and Dekker, Paul},
+  pages		= {595-625},
+  publisher	= {Cambridge University Press},
+  title		= {Imperatives},
+  year		= {2016}
+}
+
+@InCollection{	  horsten2019mathematics,
+  author	= {Horsten, Leon},
+  booktitle	= {The Stanford Encyclopedia of Philosophy (Spring 2019
+		  Edition)},
+  editor	= {Zalta, Edward N.},
+  title		= {Philosophy of Mathematics},
+  year		= {2019}
+}
+
+@Article{	  higginbotham1991meta,
+  author	= {Higginbotham, James},
+  journal	= {Linguistics and Philosophy},
+  number	= {5},
+  pages		= {555--566},
+  title		= {Remarks on the Metaphysics of Linguistics},
+  volume	= {14},
+  year		= {1991}
+}
+
 @Article{	  mcnally2013pragmatics,
   author	= {McNally, Louise},
   journal	= {Wiley Interdiscip Rev Cogn Sci},
