--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,24 @@
 
+@InCollection{	  bosque2013siempre,
+  address	= {Berlin},
+  author	= {Bosque, Ignacio},
+  booktitle	= {Dynamiques du langage et du sens. Etudes de linguistique
+		  ib{\'e}ro-romane},
+  editor	= {Azzopardi, Sophie and Sarrazin, Sophie},
+  pages		= {3-24},
+  publisher	= {Peter Lang},
+  title		= {An{\'a}lisis composicional del adverbio siempre},
+  year		= {2013}
+}
+
+@PhDThesis{	  manzini1983restructuring,
+  address	= {Cambridge, Mass.},
+  author	= {Manzini, M. Rita},
+  school	= {MIT},
+  title		= {Restructuring and Reanalysis},
+  year		= {1983}
+}
+
 @Article{	  rouveret1980causative,
   author	= {Rouveret, Alain and Vergnaud, Jean-Roger},
   journal	= {Linguistic Inquiry},
