--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,60 @@
 
+@Book{		  lujan1980adjetivo,
+  address	= {Madrid},
+  author	= {Lujan, Marta},
+  pages		= {248},
+  publisher	= {C{\'a}tedra},
+  title		= {Sintaxis y sem{\'a}ntica del adjetivo},
+  year		= {1980}
+}
+
+@Article{	  castroviejo2021exclamative,
+  author	= {Castroviejo, Elena},
+  journal	= {Journal of Linguistics},
+  number	= {1},
+  pages		= {41--82},
+  title		= {On wh-exclamatives and gradability: An argument from
+		  Romance},
+  volume	= {57},
+  year		= {2019}
+}
+
+@InCollection{	  chernilovskaya2012noteworthy,
+  address	= {Berlin, Heidelberg},
+  author	= {Chernilovskaya, Anna and Nouwen, Rick},
+  booktitle	= {Logic, Language and Meaning: Lecture Notes in Computer
+		  Science},
+  editor	= {Aloni, Maria and Kimmelman, Vadim and Roelofsen, Floris
+		  and Sassoon, Galit W. and Schulz, Katrim Westera,
+		  Matthijs},
+  pages		= {271-280},
+  publisher	= {Springer Berlin Heidelberg},
+  title		= {On Wh-Exclamatives and Noteworthiness},
+  year		= {2012}
+}
+
+@InCollection{	  wechsler2013pancake,
+  address	= {San Francisco},
+  author	= {Wechsler, Stephen},
+  booktitle	= {The Core and the Peripheru},
+  editor	= {Hofmeister, Philip and Norcliffe, Elisabeth},
+  pages		= {71-98},
+  publisher	= {CSLI Publications},
+  title		= {The Structure of Swedish Pancakes},
+  year		= {2013}
+}
+
+@Article{	  gomez1998adverbial,
+  author	= {G{\'o}mez Garc{\'i}a, Mar{\'i}a Pilar},
+  journal	= {Romanistisches Jahrbuch},
+  number	= {1998},
+  pages		= {283--306},
+  title		= {Aufs{\"a}tze und Berichte. Formas adjetivas con
+		  funci{\'o}n adverbial en espa{\~n}ol},
+  volume	= {49},
+  year		= {1998}
+}
+
 @InCollection{	  bosque2013siempre,
   address	= {Berlin},
   author	= {Bosque, Ignacio},
