--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,37 @@
 
+@InCollection{	  abusch2020pictures,
+  author	= {Abusch, Dorit},
+  booktitle	= {The Wiley Blackwell Companion to Semantics},
+  editor	= {Matthewson, Lisa and Meier, C{\'e}cile and Rullmann, Hotze
+		  and Zimmermann, Thomas Ede},
+  pages		= {1-31},
+  publisher	= {Wiley},
+  title		= {Possible‐Worlds Semantics for Pictures},
+  year		= {2020}
+}
+
+@InCollection{	  ogihara2020tense,
+  author	= {Ogihara, Toshiyuki and Kusumoto, Kiyomi},
+  booktitle	= {The Wiley Blackwell Companion to Semantics},
+  editor	= {Matthewson, Lisa and Meier, C{\'e}cile and Rullmann, Hotze
+		  and Zimmermann, Thomas Ede},
+  pages		= {1-24},
+  publisher	= {Wiley},
+  title		= {The Interpretation of Tense},
+  year		= {2020}
+}
+
+@InCollection{	  pearson2020attitude,
+  author	= {Pearson, Hazel},
+  booktitle	= {The Wiley Blackwell Companion to Semantics},
+  editor	= {Matthewson, Lisa and Meier, C{\'e}cile and Rullmann, Hotze
+		  and Zimmermann, Thomas Ede},
+  pages		= {1-22},
+  publisher	= {Wiley},
+  title		= {Attitude Verbs},
+  year		= {2020}
+}
+
 @Book{		  lujan1980adjetivo,
   address	= {Madrid},
   author	= {Lujan, Marta},
