--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,54 @@
 
+@Article{	  ludwig2007epistemology,
+  author	= {Ludwig, Kirk},
+  journal	= {Midwest Studies in Philosophy},
+  number	= {1},
+  pages		= {128--159},
+  title		= {The Epistemology of Thought Experiments: First Person
+		  versus Third Person Approaches},
+  volume	= {31},
+  year		= {2007}
+}
+
+@Article{	  li2018name,
+  author	= {Li, J and Liu, L and Chalmers, E and Snedeker, J},
+  journal	= {Cognition},
+  pages		= {108--111},
+  title		= {What is in a name?: The development of cross-cultural
+		  differences in referential intuitions.},
+  volume	= {171},
+  year		= {2018}
+}
+
+@Article{	  machery2004semantics,
+  author	= {Machery, E and Mallon, R and Nichols, S and Stich, SP},
+  journal	= {Cognition},
+  number	= {3},
+  title		= {Semantics, cross-cultural style},
+  volume	= {92},
+  year		= {2004}
+}
+
+@Article{	  sytsma2011semantics,
+  author	= {Sytsma, Justin and Livengood, Jonathan},
+  journal	= {Australasian Journal of Philosophy},
+  number	= {2},
+  pages		= {315--332},
+  title		= {A New Perspective Concerning Experiments on Semantic
+		  Intuitions},
+  volume	= {89},
+  year		= {2011}
+}
+
+@Article{	  li2021godel,
+  author	= {Li, Jincai},
+  journal	= {Journal of Semantics},
+  publisher	= {Oxford University Press (OUP)},
+  title		= {The Origin of Cross-Cultural Differences in Referential
+		  Intuitions: Perspective Taking in the G{\"o}del Case},
+  year		= {2021}
+}
+
 @InCollection{	  abusch2020pictures,
   author	= {Abusch, Dorit},
   booktitle	= {The Wiley Blackwell Companion to Semantics},
