--- a/curso-2019.bib
+++ b/curso-2019.bib
@@ -1,3 +1,68 @@
+@Book{Odden2013Phonology,
+author = {Odden, David}, 
+title = {Introducing Phonology}, 
+volume = {}, 
+pages = {350}, 
+editor = {}, 
+publisher = {Cambridge University Press}, 
+address = {}, 
+year = {2013}, 
+abstract = {}, 
+keywords = {Phonology; curso-lengua}}
+
+
+@Book{Sorenson2021Spanish,
+author = {Sorenson, Travis D.}, 
+title = {The Dialects of Spanish}, 
+volume = {}, 
+pages = {}, 
+editor = {}, 
+publisher = {Cambridge University Press}, 
+address = {}, 
+year = {2021}, 
+abstract = {}, 
+keywords = {curso-lengua; Dialects; Spanish}}
+
+
+@Book{BruhndeGaravito2021Linguistics,
+author = {}, 
+title = {Introducing Linguistics}, 
+volume = {}, 
+pages = {}, 
+editor = {Bruhn de Garavito, Joyce and Schwieter, John W.}, 
+publisher = {Cambridge University Press}, 
+address = {Cambridge}, 
+year = {2021}, 
+abstract = {}, 
+keywords = {curso-lengua; Language teaching; Linguistic analysis; Linguistics}}
+
+
+@Book{Voelkel2021Research,
+author = {Voelkel, Svenja and Kretzschmar, Franziska}, 
+title = {Introducing Linguistic Research}, 
+volume = {}, 
+pages = {}, 
+editor = {}, 
+publisher = {Cambridge University Press}, 
+address = {}, 
+year = {2021}, 
+abstract = {}, 
+keywords = {curso-lengua; Linguistic analysis; Linguistics}}
+
+
+@Book{Rankin2020Grammar,
+author = {Rankin, Tom and Whong, Melinda}, 
+title = {Grammar: a linguists' guide for language teachers}, 
+volume = {}, 
+pages = {}, 
+editor = {}, 
+publisher = {Cambridge University Press}, 
+address = {New York}, 
+year = {2020}, 
+abstract = {}, 
+keywords = {Language teaching; curso-lengua}}
+
+
 @Article{Murphy2020Language-design,
 author = {Murphy, Elliot}, 
 editor = {}, 
