--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,76 @@
 
+@Book{		  wiltschko2021interactional,
+  author	= {Wiltschko, Martina},
+  publisher	= {Cambridge University Press},
+  title		= {The Grammar of Interactional Language},
+  year		= {2021}
+}
+
+@Book{		  lei2021sentiment,
+  author	= {Lei, Lei and Liu, Dilin},
+  publisher	= {Cambridge University Press},
+  title		= {Conducting Sentiment Analysis},
+  year		= {2021}
+}
+
+@Book{		  koeneman2017syntax,
+  author	= {Koeneman, Olaf and Zeijlstra, Hedde},
+  publisher	= {Cambridge University Press},
+  title		= {Introducing Syntax},
+  year		= {2017}
+}
+
+@Book{		  odden2013phonology,
+  author	= {Odden, David},
+  pages		= {350},
+  publisher	= {Cambridge University Press},
+  title		= {Introducing Phonology},
+  year		= {2013}
+}
+
+@Book{		  grano2021attitude,
+  author	= {Grano, Thomas},
+  publisher	= {Cambridge University Press},
+  title		= {Attitude Reports},
+  year		= {2021}
+}
+
+@Book{		  polinsky2018heritage,
+  author	= {Polinsky, Maria},
+  publisher	= {Cambridge University Press},
+  title		= {Heritage Languages and Their Speakers},
+  year		= {2018}
+}
+
+@Book{		  silk2021variables,
+  author	= {Silk, Alex},
+  publisher	= {Cambridge University Press},
+  title		= {Semantics with Assignment Variables},
+  year		= {2021}
+}
+
+@Book{		  sorenson2021spanish,
+  author	= {Sorenson, Travis D.},
+  publisher	= {Cambridge University Press},
+  title		= {The Dialects of Spanish},
+  year		= {2021}
+}
+
+@Book{		  bruhndegaravito2021linguistics,
+  address	= {Cambridge},
+  editor	= {Bruhn de Garavito, Joyce and Schwieter, John W.},
+  publisher	= {Cambridge University Press},
+  title		= {Introducing Linguistics},
+  year		= {2021}
+}
+
+@Book{		  voelkel2021research,
+  author	= {Voelkel, Svenja and Kretzschmar, Franziska},
+  publisher	= {Cambridge University Press},
+  title		= {Introducing Linguistic Research},
+  year		= {2021}
+}
+
 @Article{	  ludwig2007epistemology,
   author	= {Ludwig, Kirk},
   journal	= {Midwest Studies in Philosophy},
