--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,12 @@
 
+@Book{		  charnavel2019a,
+  address	= {New York},
+  author	= {Charnavel, Isabelle},
+  publisher	= {Oxford University Press},
+  title		= {Locality and Logophoricity: A theory of exempt anaphora},
+  year		= {2019}
+}
+
 @Book{		  wiltschko2021interactional,
   author	= {Wiltschko, Martina},
   publisher	= {Cambridge University Press},
