--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,55 @@
 
+@InBook{	  seco2003contorno,
+  address	= {Madrid},
+  author	= {Seco, Manuel},
+  booktitle	= {Estudios de Lexicograf{\'i}a espa{\~n}ola},
+  pages		= {47-59},
+  publisher	= {Gredos},
+  title		= {El contorno en la definici{\'o}n lexicogr{\'a}fica},
+  year		= {2003}
+}
+
+@Book{		  hayes1986toba,
+  author	= {Hayes, Bruce},
+  pages		= {467-499},
+  title		= {Assimilation as Spreading in Toba Batak},
+  volume	= {17(3)},
+  year		= {1986}
+}
+
+@Book{		  bosch2017phonological,
+  editor	= {Bosch, Anna and Hannahs, S. J.},
+  pages		= {646},
+  publisher	= {Routledge Handbooks in Linguistics},
+  title		= {The Routledge Handbook of Phonological Theory},
+  year		= {2017}
+}
+
+@Book{		  goldsmith1996handbook,
+  author	= {Goldsmith, John A.},
+  pages		= {986},
+  publisher	= {Blackwell Publishing},
+  title		= {The Handbook of Phonological Theory},
+  year		= {1996}
+}
+
+@Book{		  espinal2020semantica,
+  author	= {Espinal, M. Teresa and Maci{\`a}, Josep and Mateu, Jaume
+		  and Quer, Josep},
+  pages		= {352},
+  publisher	= {Ediciones AKAL},
+  title		= {Sem{\'a}ntica},
+  year		= {2020}
+}
+
+@PhDThesis{	  kopping2021individual,
+  address	= {Frankfurt am Main},
+  author	= {K{\"o}pping, Jan},
+  school	= {Goethe Universit{\"a}t},
+  title		= {The individual parameter},
+  year		= {2021}
+}
+
 @Book{		  charnavel2019a,
   address	= {New York},
   author	= {Charnavel, Isabelle},
