--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,78 @@
 
+@Book{		  rose2020shift,
+  address	= {Cambridge, Mass.},
+  author	= {Deal, Amy Rose},
+  pages		= {192},
+  publisher	= {The MIT Press},
+  title		= {A Theory of Indexical Shift},
+  year		= {2020}
+}
+
+@InBook{	  rizzi1997left,
+  address	= {Amsterdam},
+  author	= {Rizzi, Luigi},
+  booktitle	= {Elements of Grammar},
+  editor	= {Haegeman, Liliane},
+  pages		= {281-373},
+  publisher	= {Kluwer},
+  title		= {The Fine Structure of the Left Periphery},
+  year		= {1997}
+}
+
+@InBook{	  sandt2020binding,
+  author	= {van der Sandt, Rob},
+  booktitle	= {The Wiley Blackwell Companion to Semantics},
+  editor	= {Matthewson, Lisa and Meier, C{\'e}cile and Rullmann, Hotze
+		  and Zimmermann, Thomas Ede},
+  publisher	= {Wiley},
+  title		= {Presuppositional Binding},
+  year		= {2020}
+}
+
+@Article{	  mendivil-giro2019biology,
+  author	= {Mend{\'i}vil-Gir{\'o}, Jos{\'e}-Luis},
+  journal	= {inference Review},
+  number	= {4},
+  title		= {Biology and Culture in Language},
+  volume	= {4},
+  year		= {2019}
+}
+
+@Article{	  mendivil-giro2021building,
+  author	= {Mend{\'i}vil-Gir{\'o}, Jos{\'e}-Luis},
+  journal	= {Theoretical Linguistics},
+  number	= {1-2},
+  pages		= {85--94},
+  title		= {On the innate building blocks of language and scientific
+		  explanation},
+  volume	= {47},
+  year		= {2021}
+}
+
+@Book{		  epstein1998derivational,
+  author	= {Epstein, Samuel David},
+  pages		= {197},
+  publisher	= {Oxford University Press on Demand},
+  title		= {A Derivational Approach to Syntactic Relations},
+  year		= {1998}
+}
+
+@Book{		  boeckx2012islands,
+  author	= {Boeckx, Cedric},
+  pages		= {190},
+  publisher	= {Cambridge University Press},
+  title		= {Syntactic Islands},
+  year		= {2012}
+}
+
+@Book{		  boeckx2006bminimalism,
+  author	= {Boeckx, Cedric},
+  pages		= {256},
+  publisher	= {OUP Oxford},
+  title		= {Linguistic Minimalism},
+  year		= {2006}
+}
+
 @InBook{	  seco2003contorno,
   address	= {Madrid},
   author	= {Seco, Manuel},
