--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,103 @@
 
+@PhDThesis{	  bruil2014evidentiality,
+  address	= {Leiden},
+  author	= {Bruil, Martine},
+  school	= {Leiden University},
+  title		= {Clause-typing and evidentiality in Ecuadorian Siona},
+  year		= {2014}
+}
+
+@PhDThesis{	  zu2018discourse,
+  address	= {New York},
+  author	= {Zu, Xin},
+  pages		= {279},
+  school	= {New York University},
+  title		= {Discourse Participants and the Structural Representation
+		  of the Context},
+  year		= {2018}
+}
+
+@Article{	  bhadra2018evidential,
+  author	= {Bhadra, Diti},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Evidentials are syntax-sensitive: The view from Bangla},
+  volume	= {3},
+  year		= {2018}
+}
+
+@Article{	  irimia2018pragmatics,
+  author	= {Irimia, Monica Alexandrina},
+  journal	= {Journal of Pragmatics},
+  pages		= {148--160},
+  title		= {Pragmatics or morpho-syntax? The encoding of indirect
+		  evidentiality in Romanian},
+  volume	= {128},
+  year		= {2018}
+}
+
+@Article{	  kennedy2016subj,
+  author	= {Kennedy, Christopher and Willer, Malte},
+  journal	= {Semantics and Linguistic Theory},
+  pages		= {913},
+  title		= {Subjective attitudes and counterstance contingency},
+  volume	= {26},
+  year		= {2016}
+}
+
+@PhDThesis{	  rudolph2019appearances,
+  address	= {Berkeley},
+  author	= {Rudolph, Rachel E.},
+  pages		= {145},
+  school	= {University of California},
+  title		= {Talking about Appearances: Experience, Evaluation, and
+		  Evidence in Discourse},
+  year		= {2019}
+}
+
+@PhDThesis{	  korotkova2016evidential,
+  address	= {Los Angeles},
+  author	= {Korotkova, Natalia},
+  pages		= {388},
+  school	= {University of California},
+  title		= {Heterogeneity and uniformity in the evidential domain},
+  year		= {2016}
+}
+
+@PhDThesis{	  bowler2018aspect,
+  address	= {Los Angeles},
+  author	= {Bowler, Margit L.},
+  pages		= {293},
+  school	= {University of California},
+  title		= {Aspect and Evidentiality},
+  year		= {2018}
+}
+
+@Article{	  fleisher2013subjectivity,
+  author	= {Fleisher, Nicholas},
+  journal	= {Semantics and Linguistic Theory},
+  pages		= {276},
+  title		= {The dynamics of subjectivity},
+  volume	= {23},
+  year		= {2013}
+}
+
+@Article{	  neelemankoot2021,
+  author	= {Neeleman, Ad and van de Koot, Hans},
+  journal	= {Nat Lang Linguist Theory},
+  title		= {The interpretation and distribution of temporal focus
+		  particles},
+  year		= {2021}
+}
+
+@Book{		  haegeman1997elements,
+  address	= {Berlin},
+  editor	= {Haegeman, Liliane},
+  publisher	= {Springer Science},
+  title		= {Elements of Grammar},
+  year		= {1997}
+}
+
 @Book{		  rose2020shift,
   address	= {Cambridge, Mass.},
   author	= {Deal, Amy Rose},
