--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,34 @@
 
+@PhDThesis{	  munoz2019tongues,
+  address	= {Chicago},
+  author	= {Mu{\~n}oz, Patrick J.},
+  pages		= {304},
+  school	= {University of Chicago},
+  title		= {On Tongues: The Grammar of Experiential Evaluation},
+  year		= {2019}
+}
+
+@Book{		  fabregas2020adjectives,
+  author	= {F{\'a}bregas, Antonio},
+  pages		= {390},
+  publisher	= {{John Benjamins Pub. Co}},
+  title		= {Morphologically Derived Adjectives in Spanish},
+  year		= {2020}
+}
+
+@InBook{	  higginbotham1983psycho,
+  address	= {Indianapolis, Ind.},
+  author	= {Higginbotham, James},
+  booktitle	= {How Many Questions? Essays in Honor of Sidney
+		  Morgenbesser},
+  editor	= {Cauman, Leigh and Levi, Isaac and Parsons, Charles and
+		  Schwartz, Robert},
+  pages		= {170-179},
+  publisher	= {Hackett Pub. Co.},
+  title		= {Is grammar psychological?},
+  year		= {1983}
+}
+
 @PhDThesis{	  bruil2014evidentiality,
   address	= {Leiden},
   author	= {Bruil, Martine},
