--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,132 @@
 
+@Article{	  knowlton2021cognitive,
+  author	= {Knowlton, Tyler and Hunter, Tim and Odic, Darko and
+		  Wellwood, Alexis and Halberda, Justin and Pietroski, Paul
+		  and Lidz, Jeffrey},
+  journal	= {Ann N Y Acad Sci},
+  number	= {1},
+  pages		= {134--144},
+  title		= {Linguistic meanings as cognitive instructions.},
+  volume	= {1500},
+  year		= {2021}
+}
+
+@Article{	  perkins2021nonlocal,
+  author	= {Perkins, Laurel and Lidz, Jeffrey},
+  journal	= {Proceedings of the National Academy of Sciences},
+  number	= {41},
+  title		= {Eighteen-month-old infants represent nonlocal syntactic
+		  dependencies},
+  volume	= {118},
+  year		= {2021}
+}
+
+@Book{		  trommer2012exponence,
+  editor	= {Trommer, Jochen},
+  publisher	= {Oxford University Press},
+  title		= {The Morphology and Phonology of Exponence},
+  year		= {2012}
+}
+
+@InBook{	  nevins2012haplology,
+  author	= {Nevins, Andrew},
+  booktitle	= {The Morphology and Phonology of Exponence},
+  editor	= {Trommer, Jochen},
+  pages		= {84-116},
+  publisher	= {Oxford University Press},
+  title		= {Haplological dissimilation at distinct stages of
+		  exponence},
+  year		= {2012}
+}
+
+@Article{	  embick2008blocking,
+  author	= {Embick, David and Marantz, Alec},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {1--53},
+  title		= {Architecture and Blocking},
+  volume	= {39},
+  year		= {2008}
+}
+
+@Article{	  menn1984repeated,
+  author	= {Menn, Lise and MacWhinney, Brian},
+  journal	= {Language},
+  number	= {3},
+  pages		= {519},
+  title		= {The Repeated Morph Constraint: Toward an Explanation},
+  volume	= {60},
+  year		= {1984}
+}
+
+@Article{	  fabregas2009phrasal,
+  author	= {F{\'a}bregas, Antonio},
+  journal	= {Nordlyd},
+  number	= {1},
+  pages		= {129--168},
+  title		= {An argument for phrasal spell-out: Indefinites and
+		  interrogatives in Spanish},
+  volume	= {36},
+  year		= {2009}
+}
+
+@Article{	  fabregas2014haplology,
+  author	= {F{\'a}bregas, Antonio},
+  journal	= {Linguistic Analysis},
+  number	= {1-2},
+  pages		= {83--124},
+  title		= {Phrasal Spell Out: An Argument From Haplology},
+  volume	= {39},
+  year		= {2014}
+}
+
+@Article{	  lopez2018casf,
+  author	= {L{\'o}pez, Luis},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {85--121},
+  title		= {Case and the Event Structure of Nominalizations},
+  volume	= {49},
+  year		= {2018}
+}
+
+@InBook{	  pena1999morfologia,
+  address	= {Madrid},
+  author	= {Pena, Jes{\'u}s},
+  booktitle	= {Gram{\'a}tica Descriptiva de la Lengua Espa{\~n}ola},
+  editor	= {Bosque, Ignacio and Demonte, Violeta},
+  pages		= {794-855},
+  publisher	= {RAE Espasa},
+  title		= {Partes de la morfolog{\'i}a. Las unidades de an{\'a}lisis
+		  morfol{\'o}gico},
+  year		= {1999}
+}
+
+@Book{		  geeslin2018spanish,
+  editor	= {Geeslin, Kimberly L.},
+  publisher	= {Cambridge University Press},
+  title		= {The Cambridge Handbook of Spanish Linguistics},
+  year		= {2018}
+}
+
+@Article{	  bosque2019integritymor,
+  author	= {Bosque, Ignacio},
+  journal	= {Oxford research Encyclopedia in Linguistics},
+  title		= {Lexical Integrity in Morphology},
+  year		= {2019}
+}
+
+@Article{	  bermudez-otero2013spanish,
+  author	= {Berm{\'u}dez-Otero, Ricardo},
+  journal	= {Probus},
+  number	= {1},
+  pages		= {3--103},
+  title		= {The Spanish lexicon stores stems with theme vowels, not
+		  roots with inflectional class features},
+  volume	= {25},
+  year		= {2013}
+}
+
 @PhDThesis{	  munoz2019tongues,
   address	= {Chicago},
   author	= {Mu{\~n}oz, Patrick J.},
