--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,66 @@
 
+@Book{		  francez2017variation,
+  author	= {Francez, Itamar and Koontz-Garboden, Andrew},
+  publisher	= {Oxford University Press},
+  title		= {Semantics and Morphosyntactic Variation},
+  year		= {2017}
+}
+
+@Article{	  landau2010implicit,
+  author	= {Landau, Idan},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {357--388},
+  title		= {The Explicit Syntax of Implicit Arguments},
+  volume	= {41},
+  year		= {2010}
+}
+
+@PhDThesis{	  rakosi2006dative,
+  author	= {R{\'a}kosi, Gy{\"o}rgy},
+  school	= {Universiteit Utrecht},
+  title		= {Dative Experiencer Predicates in Hungarian},
+  year		= {2006}
+}
+
+@Article{	  lasersohn1995like,
+  author	= {Lasersohn, Peter},
+  journal	= {Linguistic Analysis},
+  pages		= {70--77},
+  title		= {Sounds Like Like},
+  volume	= {75},
+  year		= {1995}
+}
+
+@Book{		  bentley2006split,
+  address	= {Berlin},
+  author	= {Bentley, Delia},
+  publisher	= {De Gruyter Mouton},
+  title		= {Split Intransitivity in Italian},
+  year		= {2006}
+}
+
+@Article{	  ludlow2008cheap,
+  author	= {Ludlow, Peter},
+  journal	= {Philosophical Issues},
+  number	= {1},
+  pages		= {104--129},
+  title		= {Cheap contextualism},
+  volume	= {18},
+  year		= {2008}
+}
+
+@InBook{	  lewis1980index,
+  address	= {Dordrecht},
+  author	= {Lewis, Davis},
+  booktitle	= {Philosophy and Grammar},
+  editor	= {Kanger, Stig and {\"O}hman, Sven},
+  pages		= {79-100},
+  publisher	= {Springer Netherlands},
+  title		= {Index, Context, and Content},
+  year		= {1980}
+}
+
 @Article{	  knowlton2021cognitive,
   author	= {Knowlton, Tyler and Hunter, Tim and Odic, Darko and
 		  Wellwood, Alexis and Halberda, Justin and Pietroski, Paul
